--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+README.md
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/redux-counter.iml
+.idea/modules.xml
+.idea/misc.xml
